manifests/deployment-backend-v3.yaml
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: backend-app-v3
spec:
  selector:
    matchLabels:
      app: backend
      version: v3
  replicas: 1 # tells deployment to run 2 pods matching the template
  template:
    metadata:
      labels:
        app: backend
        version: v3
    spec:
      containers:
      - name: backend-app
        image: siguremon/backend-app:0.0.1-SNAPSHOT
        ports:
        - containerPort: 8081
