manifests/service-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-app
spec:
  type: ClusterIP
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8081
      targetPort: 8081
  selector:
    app: backend
