manifests/service-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-app
spec:
  type: ClusterIP
  ports:
    - name: "http-port"
      protocol: "TCP"
      port: 8080
      targetPort: 8080
  selector:
    app: frontend
