manifests/virtualservice-backend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: backend-app
spec:
  hosts:
    - backend-app
  http:
  - route:
    - destination:
        host: backend-app
        subset: v1
      weight: 75
    - destination:
        host: backend-app
        subset: v2
      weight: 25
    - destination:
        host: backend-app
        subset: v3
      weight: 0
